* [core] Fixed tab header overflow.

--- a/netprofile_core/netprofile_core/static/css/main.css
+++ b/netprofile_core/netprofile_core/static/css/main.css
@@ -137,6 +137,7 @@ h2
 .record-tab-hdl span.x-tab-inner
 {
 	padding-top: 2px;
+	height: 16px;
 }
 
 .np-file-wrap
